--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+_homepage:
+    pattern:  /
+    defaults: { _controller: IDPCContractualBundle:Contrato:index }
+    
+idpc_contractual:
+    resource: "@IDPCContractualBundle/Resources/config/routing.yml"
+    prefix:   /
+
 idpc_solicitud:
     resource: "@IDPCSolicitudBundle/Resources/config/routing.yml"
     prefix:   /
