--- a/app/config/security.yml.dist
+++ b/app/config/security.yml.dist
@@ -25,21 +25,20 @@ security:
             security: false
 
         login:
-            pattern:  ^/admin/login$
+            pattern:  ^/demo/secured/login$
             security: false
 
         secured_area:
-            pattern:    ^/
+            pattern:    ^/demo/secured/
             form_login:
-                check_path: login_check
-                login_path: login
+                check_path: _security_check
+                login_path: _demo_login
             logout:
-                path:   logout
-                target: login
+                path:   _demo_logout
+                target: _demo
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        - { path: ^/admin, roles: ROLE_SYSTEM }
