--- a/src/Security/SecurityBundle/Resources/config/services.yml
+++ b/src/Security/SecurityBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
-#    meissen_security.example.class: Security\SecurityBundle\Example
+#    security_security.example.class: Security\SecurityBundle\Example
 
 services:
-#    meissen_security.example:
-#        class: %meissen_security.example.class%
+#    security_security.example:
+#        class: %security_security.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
