--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+idpc_base:
+    resource: "@IDPCBaseBundle/Resources/config/routing.yml"
+    prefix:   /
+
 _homepage:
     pattern:  /
     defaults: { _controller: IDPCContractualBundle:Contrato:index }
