--- a/app/config/security.qwe.yml
+++ b/app/config/security.qwe.yml
@@ -18,6 +18,7 @@ security:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+                    SystemAdmin: { password: adminpass, roles: [ 'ROLE_SYSTEM' ] }
 
     firewalls:
         dev:
@@ -25,20 +26,21 @@ security:
             security: false
 
         login:
-            pattern:  ^/demo/secured/login$
+            pattern:  ^/admin/login$
             security: false
 
         secured_area:
-            pattern:    ^/demo/secured/
+            pattern:    ^/
             form_login:
-                check_path: _security_check
-                login_path: _demo_login
+                check_path: login_check
+                login_path: login
             logout:
-                path:   _demo_logout
-                target: _demo
+                path:   logout
+                target: login
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/admin, roles: ROLE_SYSTEM }
