--- a/app/config/security.dist.yml
+++ b/app/config/security.dist.yml
@@ -1,24 +1,17 @@
 security:
     encoders:
-        Security\SecurityBundle\Entity\User:
-            algorithm: sha512
-            encode-as-base64: true
-            iterations: 10
+        Symfony\Component\Security\Core\User\User: plaintext
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        user_db:
-            entity: { class: Security\SecurityBundle\Entity\User, property: username }
-
         in_memory:
             memory:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-                    SystemAdmin: { password: adminpass, roles: [ 'ROLE_SYSTEM' ] }
 
     firewalls:
         dev:
@@ -26,21 +19,21 @@ security:
             security: false
 
         login:
-            pattern:  ^/admin/login$
+            pattern:  ^/demo/secured/login$
             security: false
 
         secured_area:
-            pattern:    ^/
+            pattern:    ^/demo/secured/
             form_login:
-                check_path: login_check
-                login_path: login
+                check_path: _security_check
+                login_path: _demo_login
             logout:
-                path:   logout
-                target: login
+                path:   _demo_logout
+                target: _demo
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
 
     access_control:
+        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        - { path: ^/admin, roles: ROLE_SYSTEM }
