Revert 952ff72..bfcde59
This rolls back to commit 952ff7297790c90e6ce92bc237e6dfde93d39405.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,6 +87,5 @@ knp_snappy:
 
 jms_security_extra:
     expressions: true
-    method_access_control:
-        #'IDPCContractualBundle:Pago:IndexAction' : 'hasRole("ROLE_CONTRATISTA")'
-        #'IDPCContractualBundle:Pago:*' : 'hasRole("ROLE_SYSTEM") and hasRole("ROLE_ADMIN")'
+    #method_access_control:
+     #   'IDPCSolicitudBundle:.*:*' : 'hasRole("ROLE_SYSTEM") and hasRole("ROLE_ADMIN")'
