--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,7 +4,7 @@ idpc_base:
 
 _homepage:
     pattern:  /
-    defaults: { _controller: SecuritySecurityBundle:Default:index }
+    defaults: { _controller: IDPCContractualBundle:Contrato:index }
     
 idpc_contractual:
     resource: "@IDPCContractualBundle/Resources/config/routing.yml"
